--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -115,7 +115,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../gamebinaries/Shell_Jump_Go_Linux_1.0.apk"
+export_path="../../gamebinaries/Shell_Jump_Go_Android_1.0.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -130,27 +130,27 @@ gradle_build/use_gradle_build=false
 gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
-architectures/armeabi-v7a=false
+architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
 keystore/debug=""
 keystore/debug_user=""
 keystore/debug_password=""
-keystore/release=""
-keystore/release_user=""
+keystore/release="/home/otto/Shell_Jump_Go.keystore"
+keystore/release_user="Shell_Jump_Go"
 keystore/release_password=""
 version/code=1
 version/name="1.0"
 package/unique_name="org.ottop.Shell_Jump_Go"
-package/name=""
+package/name="Shell Jump Go"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
 package/exclude_from_recents=false
-launcher_icons/main_192x192=""
-launcher_icons/adaptive_foreground_432x432=""
-launcher_icons/adaptive_background_432x432=""
+launcher_icons/main_192x192="res://art/mainicon.png.png"
+launcher_icons/adaptive_foreground_432x432="res://art/adaptiveiconfg.png.png"
+launcher_icons/adaptive_background_432x432="res://art/adaptiveiconbg.png.png"
 graphics/opengl_debug=false
 xr_features/xr_mode=0
 xr_features/hand_tracking=0
